--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: "ubuntu-latest"
+    steps:
+    - run: echo "BUILD"
   Test:
     runs-on: "ubuntu-latest"
     if: github.event_name == 'workflow_dispatch' 
