--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
   Production:
     runs-on: "ubuntu-latest"
     needs: [Test, Load-Test]
-    if: github.event_name == 'workflow_dispatch' 
+    if: github.event.inputs.environment == 'Production'
     steps:
     - run: |
         echo "🚀 Step 1..."
